[package]
name = "letterbox-lang"
version = "0.2.0"
edition = "2021"
keywords = ["letterbox", "esolang", "lexer", "parser", "interpreter"]
categories = ["parser-implementations"]
description = "A modular lexer and parser for the Letterbox esoteric programming language."
license-file = "license.txt"
repository = "https://github.com/CNatcharian/letterbox-lang"
homepage = "https://esolangs.org/wiki/Letterbox"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
regex = "1.8.1"
